{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Movement",
            "id": "2e050e8d-faca-41c9-a39f-6615ceda7dc5",
            "actions": [
                {
                    "name": "Forward / Backward",
                    "type": "Value",
                    "id": "7a945d9f-befe-4527-bb1a-0c5e4d796243",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Right / Left",
                    "type": "Button",
                    "id": "e2a33453-e32e-47e1-8c73-4f57c06a3430",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5955664a-a73b-424b-ae30-9679f39e0532",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Value",
                    "id": "e4c30007-3c90-4dd6-bfde-13dbf641183a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Value",
                    "id": "400da329-eff1-46fb-8bb2-695817e3f471",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "811a35ee-c3cd-4081-85ee-8fd530b5784b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward / Backward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "0a5ca5cc-b230-4da1-8407-3535008d4379",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward / Backward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "d82a8282-ab96-47dd-937c-a6fe44511f69",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward / Backward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "0a9d4bf5-9cca-45a5-8124-2db77bede7ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right / Left",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2f32312b-0d3b-4ef6-a9ce-22983802b05d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right / Left",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "5d2c380c-5451-48fc-ad6b-fbd4b9d0e87e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right / Left",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ff49bc33-f2e1-481f-a8d3-2669948af119",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fbba766-b6fc-4fa8-9309-b47cfca091b5",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bafcb29-f6b6-4ef5-b15d-76346f7af8a2",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "1f75c239-d6c3-40c7-b8b2-4cabc26dd91f",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "9e7d4381-0790-495c-8473-4adbbe2e7393",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c7bf175-212c-4dde-9dbe-054ea87cf7e4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Leaning",
            "id": "f273ed68-53c1-46f5-a86e-59ae866bb68a",
            "actions": [
                {
                    "name": "LeanLeft",
                    "type": "Button",
                    "id": "5a2e52c2-a1eb-48a2-9915-eb3e36ad098f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRight",
                    "type": "Button",
                    "id": "ecd3e44d-a6d1-485e-9c31-4a6cfe6c2be1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e704d0f1-c56c-42a9-91cb-0c5d3599d71a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "369226af-1945-4e6a-ad28-9c7e449e210c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shooting",
            "id": "7833f7ab-375b-4acf-9a3a-d7f695ced83c",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "7ce76d4c-20a1-46ce-ac0b-2e91c07852fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5fc36a45-b4e8-4c97-b6dc-144c1b87ae6c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}